Defect Fix - GF-44931 - Broken Picker Arrows
added "white-space: nowrap;" to simple integer picker.
Modified CSS of sample to handle these issues.
1. avoid overlapping of picker on images,
2. Images truncation
3. Picker truncation issues.

Enyo-DCO-1.1-Signed-off-by: Ashwini R <ashwini13.r@lge.com>

--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -955,6 +955,7 @@
   margin-left: 10px;
 }
 .moon-simple-integer-picker {
+  white-space: nowrap;
   font-family: "MuseoSans 700";
   font-size: 30px;
   font-weight: normal;
